# kindel

./: .gitignore  README.md  pixi.toml  pyproject.toml  results_table.md
kindel/: results.py  run.py
kindel/models/: basic.py  gnn.py  moe.py  torch.py
kindel/utils/: data.py  graph_feat.py
lightning_logs/version_0/: metrics.csv
lightning_logs/version_1/: metrics.csv
lightning_logs/version_10/: metrics.csv
lightning_logs/version_11/: metrics.csv
lightning_logs/version_12/: metrics.csv
lightning_logs/version_13/: metrics.csv
lightning_logs/version_14/: metrics.csv
lightning_logs/version_15/: metrics.csv
lightning_logs/version_16/: metrics.csv
lightning_logs/version_17/: metrics.csv
lightning_logs/version_18/: metrics.csv
lightning_logs/version_19/: metrics.csv
lightning_logs/version_2/: metrics.csv
lightning_logs/version_20/: metrics.csv
lightning_logs/version_21/: metrics.csv
lightning_logs/version_22/: metrics.csv
lightning_logs/version_23/: metrics.csv
lightning_logs/version_24/: metrics.csv
lightning_logs/version_25/: metrics.csv
lightning_logs/version_26/: metrics.csv
lightning_logs/version_27/: metrics.csv
lightning_logs/version_28/: metrics.csv
lightning_logs/version_29/: metrics.csv
lightning_logs/version_3/: metrics.csv
lightning_logs/version_30/: metrics.csv
lightning_logs/version_31/: metrics.csv
lightning_logs/version_32/: metrics.csv
lightning_logs/version_33/: metrics.csv
lightning_logs/version_34/: metrics.csv
lightning_logs/version_35/: metrics.csv
lightning_logs/version_36/: metrics.csv
(+130 files in other folders)
